# Capstone

./: .gitignore
backend/: Cargo.toml  TwoPhaseCommit.json  contract_abi.json  go.mod  go.sum  main.go  script.sh
backend/chord/: chord.go
backend/helper/: RSA.go  functions.go  structs.go
backend/src/: main.rs
backend/testing/: testing.go
frontend/: package.json
frontend/src/: App.tsx  DataDisplay.tsx  Header.css  Header.tsx  MainPage.tsx  index.tsx  websocket.ts
hardhat/: hardhat.config.ts  package.json
hardhat/contracts/: TwoPhaseCommit.sol
hardhat/test/: TwoPhaseCommit.ts
